# Toyota-In-Space-My-First-Rust-Standalone-Project-

./: Cargo.toml  README.md
assets/: Asteroid.glb  assets_attributions.txt  car.glb
src/: asset_loader.rs  asteroids.rs  camera.rs  collision_detection.rs  debug.rs  main.rs  movement.rs  spaceship.rs
