[package]
name = "spaceship_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa-sys = "0.3.1"
bevy = "0.12.1"

# Optional optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high level optimizations for dependencies (Bevy)
[profile.dev.package."*"]
opt-level = 3
